<resources>
    <string name="app_name">nutripro</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveButton">Save</string>
    <string name="editPulse">Pulse:</string>
    <string name="editSystolic">Systolic:</string>
    <string name="editDiatolic">Diatolic:</string>
    <string name="editDate">Diatolic:</string>
    <string name="buttonEat">Eat</string>
    <string name="buttonMeasure">Measure</string>
    <string name="buttonEvaluate">Eval</string>
</resources>
